<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:paddingLeft="10dp"
        android:text="@string/switch_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switch2"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:text="@string/min_OC" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch1"
        android:layout_below="@+id/switch1"
        android:layout_marginTop="26dp" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch2"
        android:layout_below="@+id/switch2"
        android:layout_marginTop="31dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/switch3"
        android:paddingLeft="10dp"
        android:text="@string/smart" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch3"
        android:layout_below="@+id/switch3"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/switch4"
        android:paddingLeft="10dp"
        android:text="@string/smartagr" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="29dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/switch5"
        android:paddingLeft="10dp"
        android:text="@string/usercap" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch5"
        android:layout_below="@+id/switch5"
        android:layout_marginTop="34dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignTop="@+id/switch6"
        android:paddingLeft="10dp"
        android:text="@string/audiomin" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="401dp"
        android:layout_height="81dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:src="@drawable/ncx" />

</RelativeLayout>